--- a/Tpl/Admin/Goods/goodsManage.html
+++ b/Tpl/Admin/Goods/goodsManage.html
@@ -93,8 +93,9 @@
 
 	$(document).ready(function(){
 	loadFile("goods", host + "g=Admin&m=GoodsSet&a=showAll");
+	loadFile("marketgoodsSet", host + "g=Admin&m=MarketGoodsSet&a=showAll");
 	loadFile("goodspriceSet", host + "g=Admin&m=PriceSet&a=showAll");
-	
+
 });
     $('#myTab a').click(function(e){
         e.preventDefault();
